--- a/index.html
+++ b/index.html
@@ -1,44 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=1024px, initial-scale=1.0">
-    <title>Resume</title>
-    <link rel="stylesheet" href="html.css">
-</head>
-<body>
-    
-<h1> <stong>Viktor Kotsur</stong></h1>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=1024px, initial-scale=1.0">
+        <title>Resume</title>
+        <link rel="stylesheet" href="html.css">
+    </head>
+    <body>
+        <section>
+            <section class="block"> 
+                <div class="foto">
+                    <img src="mainfoto.png" alt="mainfoto" width="220" height="250px"><a href="mainfoto.png"></a>
+                </div>
+                <div class="name">
+                    <h1><strong>Viktor Kotsur</strong></h1>
+                </div>
+            </section>      
+                <hr>
+            <section class="block">    
+                <h2><strong>Information</strong></h2>
 
+                <div>Mobile : +375 29 667 32 97</div>
+                <div>Email: videbul@gmail.com</div>
+                <div>Address: 23 Shugaeva street, Minsk, Belarus.</div>
 
-<h2><strong>Information</strong></h2>
+            </section>
+            <section class="block">
+                <h2><strong>Objective</strong></h2>
 
-Mobile : +375 29 667 32 97
-Email: videbul@gmail.com
-Address: 23 Shugaeva street, Minsk, Belarus.
+                <div>I am looking for a position in a company where I can improve my knowledge. Created and maintained an online store.</div>
 
+            </section>
+            <section class="block">
+                <h2><strong>Education</strong></h2>
 
-<h2><strong>Objective</strong></h2>
+                <div>Belarusian state University of Radioelectronics (2003 - 2007), faculty of computer design of radioelectronic devices. Completed SEO Courses, creating an intranet store on opencart.</div>
 
-I am looking for a position in a company where I can improve my knowledge. Created and maintained an online store.
+            </section>
+            <section class="block">
+                <h2><strong>Skills</strong></h2>
 
+                PHP, HTML, CSS, GIT, docker, Docker-compose, Composer, Laravel, Opencart, Wordpress, Linux
+            </section>
+            <section class="block">
 
-<h2><strong>Education</strong></h2>
+                <h2><strong>English level</strong></h2>
 
-Belarusian state University of Radioelectronics (2003 - 2007), faculty of computer design of radioelectronic devices. Completed SEO Courses, creating an intranet store on opencart.
-
-
-<h2><strong>Skills</strong></h2>
-
-PHP, HTML, CSS, GIT, docker, Docker-compose, Composer, Laravel, Opencart, Wordpress, Linux
-
-
-<h2><strong>English level</strong></h2>
-
-Studying English level A2 courses.
-
-<h2><strong>Code example</strong></h2>
-
-github.com/erfolen, website: dlababy.by and odo.moscow
-</body>
+            <div> Studying English level A2 courses.</div>
+            </section>
+            <section class="block">
+                <h2><strong>Code example</strong></h2>
+            
+                github.com/erfolen, website: dlababy.by and odo.moscow
+            </section>
+        </section>
+    </body>
 </html>
