fix: update html.css and index.html

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     </head>
     <body>
         <section>
-            <section class="block"> 
+            <section class="mainblock"> 
                 <div class="foto">
-                    <img src="mainfoto.png" alt="mainfoto" width="220" height="250px"><a href="mainfoto.png"></a>
+                    <img src="mainfoto.png" alt="mainfoto" width="220" height="250px">
                 </div>
                 <div class="name">
                     <h1><strong>Viktor Kotsur</strong></h1>
@@ -19,39 +19,33 @@
                 <hr>
             <section class="block">    
                 <h2><strong>Information</strong></h2>
-
-                <div>Mobile : +375 29 667 32 97</div>
-                <div>Email: videbul@gmail.com</div>
-                <div>Address: 23 Shugaeva street, Minsk, Belarus.</div>
-
+                <div class="infoblock">
+                    <div class="mobileblock">Mobile : +375 29 667 32 97</div>
+                    <div class="emailblock">Email: videbul@gmail.com</div>
+                    <div class="adressblock">Address: 23 Shugaeva street, Minsk, Belarus.</div>
+                </div>
             </section>
             <section class="block">
                 <h2><strong>Objective</strong></h2>
-
                 <div>I am looking for a position in a company where I can improve my knowledge. Created and maintained an online store.</div>
-
             </section>
             <section class="block">
                 <h2><strong>Education</strong></h2>
-
                 <div>Belarusian state University of Radioelectronics (2003 - 2007), faculty of computer design of radioelectronic devices. Completed SEO Courses, creating an intranet store on opencart.</div>
-
             </section>
             <section class="block">
                 <h2><strong>Skills</strong></h2>
-
-                PHP, HTML, CSS, GIT, docker, Docker-compose, Composer, Laravel, Opencart, Wordpress, Linux
+                <div>PHP, HTML, CSS, GIT, docker, Docker-compose, Composer, Laravel, Opencart, Wordpress, Linux</div>
             </section>
             <section class="block">
-
                 <h2><strong>English level</strong></h2>
-
-            <div> Studying English level A2 courses.</div>
+                <div> Studying English level A2 courses.</div>
             </section>
             <section class="block">
                 <h2><strong>Code example</strong></h2>
-            
-                github.com/erfolen, website: dlababy.by and odo.moscow
+                <div>
+                    <a href="https://github.com/erfolen">github repository</a>, website: <a href="https://dlababy.by">dlababy.by</a> and <a href="https://odo.moscow">odo.moscow</a>
+                </div>
             </section>
         </section>
     </body>
